# yt-musik-dl

./: .env.example  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/auth/: __init__.py  auth_handler.py
backend/routes/: api.py  auth.py  music.py
backend/utils/: helper.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AuthButtons.tsx  CardForm.tsx  DataForm.tsx  LoginForm.tsx
frontend/src/components/ui/: spinner.tsx
