[project]
name = "temp"
version = "0.1.0"
description = ""
authors = [{name = "SyrymAbdikhan"}]
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
mutagen = "^1.47.0"
yt-dlp = "^2025.3.31"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
werkzeug = "^3.1.3"
jinja2 = "^3.1.6"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.41"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
bcrypt = "4.0.1"

[tool.poetry]
package-mode = false
